tests/snapshots/files__bool-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
.b0_:
  c1_: bool = const true;
  print c1_;
  ret;
}
