tests/snapshots/files__bool-rvsdg-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
  v1: bool = const true;
  print v1;
}

