tests/snapshots/files__bool-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
main {
cond: bool = const true;
print cond;
return
}
