tests/snapshots/files__branch_duplicate_work-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
  c1_: int = const 2;
  v2_: bool = lt v0 c1_;
  v3_: int = add v0 v0;
  v4_: int = id v3_;
  br v2_ .b5_ .b6_;
.b5_:
  print v4_;
  ret;
  jmp .b7_;
.b6_:
  v8_: int = mul c1_ v3_;
  v4_: int = id v8_;
  print v4_;
  ret;
.b7_:
}
