tests/snapshots/files__branch_duplicate_work-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
main {
block:
 two: int = const 2;
 isless: bool = lt x two;
 if isless:
  result: int = add x x;
 else:
  double: int = add x x;
  result: int = mul double two;
print result;
return
}
